[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/TitleTheme.tres" type="Theme" id=1]
[ext_resource path="res://TicTacToe/TicTacToeGrid.gd" type="Script" id=2]

[node name="TicTacToeGrid" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 2 )

[node name="TextureLayer" type="CanvasLayer" parent="."]

[node name="TextureGridContainer" type="GridContainer" parent="TextureLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -304.0
margin_top = -304.0
margin_right = 304.0
margin_bottom = 304.0
rect_min_size = Vector2( 600, 600 )
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="0Texture" type="TextureRect" parent="TextureLayer/TextureGridContainer"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )

[node name="1Texture" type="TextureRect" parent="TextureLayer/TextureGridContainer"]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )

[node name="2Texture" type="TextureRect" parent="TextureLayer/TextureGridContainer"]
margin_left = 408.0
margin_right = 608.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )

[node name="3Texture" type="TextureRect" parent="TextureLayer/TextureGridContainer"]
margin_top = 204.0
margin_right = 200.0
margin_bottom = 404.0
rect_min_size = Vector2( 200, 200 )

[node name="4Texture" type="TextureRect" parent="TextureLayer/TextureGridContainer"]
margin_left = 204.0
margin_top = 204.0
margin_right = 404.0
margin_bottom = 404.0
rect_min_size = Vector2( 200, 200 )

[node name="5Texture" type="TextureRect" parent="TextureLayer/TextureGridContainer"]
margin_left = 408.0
margin_top = 204.0
margin_right = 608.0
margin_bottom = 404.0
rect_min_size = Vector2( 200, 200 )

[node name="6Texture" type="TextureRect" parent="TextureLayer/TextureGridContainer"]
margin_top = 408.0
margin_right = 200.0
margin_bottom = 608.0
rect_min_size = Vector2( 200, 200 )

[node name="7Texture" type="TextureRect" parent="TextureLayer/TextureGridContainer"]
margin_left = 204.0
margin_top = 408.0
margin_right = 404.0
margin_bottom = 608.0
rect_min_size = Vector2( 200, 200 )

[node name="8Texture" type="TextureRect" parent="TextureLayer/TextureGridContainer"]
margin_left = 408.0
margin_top = 408.0
margin_right = 608.0
margin_bottom = 608.0
rect_min_size = Vector2( 200, 200 )

[node name="ButtonLayer" type="CanvasLayer" parent="."]

[node name="TicTacToeGrid" type="GridContainer" parent="ButtonLayer"]
modulate = Color( 1, 1, 1, 0.172549 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -300.0
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 600, 600 )
theme = ExtResource( 1 )
columns = 3

[node name="0Buton" type="Button" parent="ButtonLayer/TicTacToeGrid"]
margin_right = 198.0
margin_bottom = 198.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0"

[node name="1Button" type="Button" parent="ButtonLayer/TicTacToeGrid"]
margin_left = 202.0
margin_right = 399.0
margin_bottom = 198.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1"

[node name="2Button" type="Button" parent="ButtonLayer/TicTacToeGrid"]
margin_left = 403.0
margin_right = 600.0
margin_bottom = 198.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2"

[node name="3Button" type="Button" parent="ButtonLayer/TicTacToeGrid"]
margin_top = 202.0
margin_right = 198.0
margin_bottom = 399.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3"

[node name="4Button" type="Button" parent="ButtonLayer/TicTacToeGrid"]
margin_left = 202.0
margin_top = 202.0
margin_right = 399.0
margin_bottom = 399.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4"

[node name="5Button" type="Button" parent="ButtonLayer/TicTacToeGrid"]
margin_left = 403.0
margin_top = 202.0
margin_right = 600.0
margin_bottom = 399.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "5"

[node name="6Button" type="Button" parent="ButtonLayer/TicTacToeGrid"]
margin_top = 403.0
margin_right = 198.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "6"

[node name="7Button" type="Button" parent="ButtonLayer/TicTacToeGrid"]
margin_left = 202.0
margin_top = 403.0
margin_right = 399.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "7"

[node name="8Button" type="Button" parent="ButtonLayer/TicTacToeGrid"]
margin_left = 403.0
margin_top = 403.0
margin_right = 600.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "8"
